"#yourhashtag" durch "AntScout" ersetzt, das Logo unten Links ersetzt und das Google-IO-Logo auf der Titel-Folie entfernt.

--- a/presentation/theme/scss/default.scss
+++ b/presentation/theme/scss/default.scss
@@ -2,7 +2,7 @@
 @import "compass/css3/columns";
 @import "compass/css3/user-interface";
 
-$social-tags: '#yourhashtag';
+$social-tags: "AntScout";
 $brand-small-icon-size: 30px;
 
 $gray-1: #e6e6e6;
@@ -49,8 +49,6 @@ $article-content-top-padding: 45px;
   @include background(linear-gradient(white, white 85%, $gray-1));
   background-color: white;
 }
-
-
 
 /**
  * Theme Styles
@@ -174,7 +172,7 @@ slides > slide {
       position: absolute;
       bottom: $slide-top-bottom-padding / 2;
       left: $slide-left-right-padding;
-      background: url(../../images/google_developers_icon_128.png) no-repeat 0 50%;
+      background: url(../../images/FH-Wedel-Logo-128.png) no-repeat 0 50%;
       @include background-size($brand-small-icon-size $brand-small-icon-size);
       padding-left: $brand-small-icon-size + 10;
       height: $brand-small-icon-size;
@@ -193,7 +191,6 @@ slides > slide {
   &.title-slide {
     &:after {
       content: '';
-      background: url(../../images/io2012_logo.png) no-repeat 100% 50%;
       @include background-size(contain);
       position: absolute;
       bottom: $slide-top-bottom-padding;
