--- a/presentation/theme/scss/default.scss
+++ b/presentation/theme/scss/default.scss
@@ -759,7 +759,7 @@ article.smaller {
   font-size: 14px;
   color: $gray-2;
   position: absolute;
-  bottom: $slide-top-bottom-padding + 30px;
+  bottom: $slide-top-bottom-padding;
   left: $slide-left-right-padding;
 }
 
@@ -878,11 +878,18 @@ article.smaller {
   }
 }
 
+aside {
+  @include border-radius(10px);
+  padding: 1.0em;
+  position: absolute;
+}
+
 aside.gdbar {
   height: 97px;
   width: 215px;
   position: absolute;
   left: -1px;
+  padding: 0em;
   top: 125px;
   @include border-radius(0 10px 10px 0);
   @include background(linear-gradient(left, $gray-1, $gray-1) no-repeat);
@@ -916,6 +923,24 @@ aside.gdbar {
   }
 }
 
+.dark {
+  background-color: rgba($gray-4, 0.9);
+
+  h2 {
+    color: $gray-1;
+  }
+}
+
+.left {
+  @include border-radius(0px 10px 10px 0px);
+  left: 0px;
+}
+
+.right {
+  @include border-radius(10px 0px 0px 10px);
+  right: 0px;
+}
+
 .title-slide {
 
   hgroup {
@@ -941,6 +966,10 @@ aside.gdbar {
       margin-top: 2em;
     }
   }
+}
+
+.top {
+  top: 60px;
 }
 
 .quote {
